--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -130,27 +130,8 @@ X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.hidden) )
 U_n.linkages(X, D)
 
 ```
-```{r}
-library(cli)
-```
 
 
-```{r}
-library(cli)
-library(clrdag)
-set.seed(2019)
-m = 1e2
-out = rep(NA, m)
-cli_progress_bar("Cleaning data", total = m)
-for(i in 1:m){
-  X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.hidden) )
-  Un= U_n.linkages(X, D)
-  out[i] = (Un>-log(0.05))
-  cli_progress_update()
-}
-cli_progress_done()
-sum(out)/m
-```
 
 We've said that A is unknown, so if we want to test the existence of some link in the Dag or some specific pathway we can't look into it, so we need a test.
 
@@ -226,15 +207,15 @@ Since the value of $U_n$ depends on the sample X and on the linkages that we wan
 
 ```{r}
 U_n.linkages = function(X, D){
-  n = dim(X)[0]
+  n = dim(X)[1]
   X.tr = X[1:(n%/%2),]
   X.te = X[(n%/%2+1):n,]
   
   tmp = MLEdag(X = X.tr, D = D, tau = 0.35, mu = 1, 
                     rho = 1.2, trace_obj = FALSE)
   A.h0 = tmp$A.H0
-  #A = tmp$A.H1
-  A = MLEdag(X = X.te, tau = 0.35, mu = 1,rho = 1.2, trace_obj = FALSE)$A
+  A = tmp$A.H1
+  #A = MLEdag(X = X.te, tau = 0.35, mu = 1,rho = 1.2, trace_obj = FALSE)$A
   
   sigma.h0 = sigma.estimator(X.tr, A.h0)
   sigma.unconstrained = sigma.estimator(X.te, A)
@@ -251,20 +232,25 @@ U_n.path= function(X, D){
   X.te = X[(n%/%2+1):n,]
   
   # Computing all the A.h0 over the sparsity parameters 'k'
-  A.h0s  = lapply(1:sum(D), function(mu)MLEdag(X.tr, D=D, tau=0.35, mu=mu, rho=1.2, trace_obj = F)$A.H0)
+  A.mles = lapply(1:sum(D), function(mu)MLEdag(X.tr, D=D, tau=0.35, mu=mu, rho=1.2, trace_obj = F))
+  A.h0s  = lapply(A.mles, function(a)a$A.H0)
+  A.h1s  = lapply(A.mles, function(a)a$A.H1)
   # For each A.h0 compute the associated sigma
-  sigmas = t(sapply(A.h0s, function(a)sigma.estimator(X.tr, a)))
+  sigmas.0 = t(sapply(A.h0s, function(a)sigma.estimator(X.tr, a)))
+  sigmas.1 = t(sapply(A.h1s, function(a)sigma.estimator(X.te, a)))
   # Computing the likelihoods of each pair (A.h0, sigma.h0)
-  likelihoods = t(sapply(1:length(sigmas), function(idx)log_likelihood(X.tr, A.h0s[[idx]], sigmas[idx])))
+  likelihoods.0 = t(sapply(1:length(sigmas.0), function(idx)log_likelihood(X.tr, A.h0s[[idx]], sigmas.0[idx])))
+  likelihoods.1 = t(sapply(1:length(sigmas.1), function(idx)log_likelihood(X.tr, A.h1s[[idx]], sigmas.1[idx])))
   
   # Finding the idx that give us the maximum likelihood
-  mle_idx = which(likelihoods==max(likelihoods))[1] # maximum likelihood over h0
+  mle_idx.0 = which(likelihoods.0==max(likelihoods.0))[1] # maximum likelihood over h0
+  mle_idx.1 = which(likelihoods.1==max(likelihoods.1))[1] # maximum likelihood over h0
   
   A= MLEdag(X = X.te, tau = 0.35, mu = 1, 
                   rho = 1.2, trace_obj = FALSE)$A
   sigma.unconstrained = sigma.estimator(X.te, A)
-  
-  return(list(U.n=exp(log_likelihood(X.tr, A, sigma.unconstrained)-likelihoods[mle_idx]), A.h0=A.h0s[[mle_idx]]))
+  return (likelihoods.1[mle_idx.1]-likelihoods.0[mle_idx.0])
+  #return(list(U.n=exp(log_likelihood(X.tr, A, sigma.unconstrained)-likelihoods[mle_idx]), A.h0=A.h0s[[mle_idx]]))
 }
 ```
 
@@ -272,36 +258,160 @@ U_n.path= function(X, D){
 ```{r}
 library(clrdag)
 D.pathway = matrix(0, p,p)
-D.pathway[4,3]=1
-D.pathway[5,4]=1
-D.pathway[6,5]=1
-D.pathway[7,6]=1
+D.pathway[3, 4]=1
+D.pathway[4, 5]=1
+D.pathway[5, 6]=1
+D.pathway[6, 7]=1
 
 A.pathway.hidden = matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
 A.pathway.hidden[upper.tri(A.hidden, diag = T)] = 0
-A.pathway.hidden[4,3]=0
+A.pathway.hidden[4,3]=1
 A.pathway.hidden[5,4]=1
 A.pathway.hidden[6,5]=1
 A.pathway.hidden[7,6]=1
 X.pathway = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.pathway.hidden))
 #X.pathway = generate.X(p, n, D=D, h0=F, linkages = F)
 out= U_n.path(X.pathway, D.pathway)
-abs(out$A.h0-A.hidden)
-out$U.n
+#abs(out$A.h0-A.hidden)
+out#$U.n #log 0.05= -2.995732
 ```
 
 ```{r}
-library(cli)
-m = 1e2
-out = rep(NA, m)
-cli_progress_bar("Cleaning data", total = m)
-for(i in 1:m){
-  X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.pathway.hidden) )
-  Un= U_n.path(X, D.pathway)$U.n
-  out[i] = (Un>20)
-  cli_progress_update()
+inner_LRT_function.paths = function(X.tr, X.te, D){
+   
+  # Computing all the A.h0 over the sparsity parameters 'k'
+  A.mles = lapply(1:sum(D), function(mu)MLEdag(X.tr, D=D, tau=0.35, mu=mu, rho=1.2, trace_obj = F))
+  A.h0s  = lapply(A.mles, function(a)a$A.H0)
+  A.h1s  = lapply(A.mles, function(a)a$A.H1)
+  # For each A.h0 compute the associated sigma
+  sigmas.0 = t(sapply(A.h0s, function(a)sigma.estimator(X.tr, a)))
+  sigmas.1 = t(sapply(A.h1s, function(a)sigma.estimator(X.te, a)))
+  # Computing the likelihoods of each pair (A.h0, sigma.h0)
+  likelihoods.0 = t(sapply(1:length(sigmas.0), function(idx)log_likelihood(X.tr, A.h0s[[idx]], sigmas.0[idx])))
+  likelihoods.1 = t(sapply(1:length(sigmas.1), function(idx)log_likelihood(X.tr, A.h1s[[idx]], sigmas.1[idx])))
+  
+  # Finding the idx that give us the maximum likelihood
+  mle_idx.0 = which(likelihoods.0==max(likelihoods.0))[1] # maximum likelihood over h0
+  mle_idx.1 = which(likelihoods.1==max(likelihoods.1))[1] # maximum likelihood over h0
+  
+  A= MLEdag(X = X.te, tau = 0.35, mu = 1, 
+                  rho = 1.2, trace_obj = FALSE)$A
+  sigma.unconstrained = sigma.estimator(X.te, A)
+  return (likelihoods.1[mle_idx.1]-likelihoods.0[mle_idx.0])
+  #return(list(U.n=exp(log_likelihood(X.tr, A, sigma.unconstrained)-likelihoods[mle_idx]), A.h0=A.h0s[[mle_idx]]))
 }
-cli_progress_done()
-sum(out)/m
+
+inner_LRT_function.links = function(X.tr, X.te, D){
+  
+  tmp = MLEdag(X = X.tr, D = D, tau = 0.35, mu = 1, 
+                    rho = 1.2, trace_obj = FALSE)
+  A.h0 = tmp$A.H0
+  A = tmp$A.H1
+  
+  sigma.h0 = sigma.estimator(X.tr, A.h0)
+  sigma.unconstrained = sigma.estimator(X.te, A)
+  
+  return(log_likelihood(X.tr, A, sigma.unconstrained)-log_likelihood(X.tr, A.h0, sigma.h0))
+}
+
+log.LRT = function(X,D, links=T){
+  n=dim(X)[1]
+  X.tr = X[1:(n%/%2),]
+  X.te = X[(n%/%2+1):n,]
+  
+  if(links){
+  U_n = inner_LRT_function.links(X.tr, X.te, D)
+  U_n.swap = inner_LRT_function.links(X.te, X.tr, D)
+  }
+  else{
+    U_n = inner_LRT_function.paths(X.tr, X.te, D)
+    U_n.swap = inner_LRT_function.paths(X.te, X.tr, D)
+  }
+  return(list(links = links, U_n = U_n, W_n = (log((exp(U_n)+exp(U_n.swap))/2))))
+}
+
 ```
+
+
+
+
+```{r}
+library(cli)
+library(clrdag)
+test_path = function(m=1e2,h0=T, alpha = 0.05){
+  p = 10
+  n = 100
+  sparsity = 2/p
+  D.pathway = matrix(0, p,p)
+  D.pathway[3, 4]=1
+  D.pathway[4, 5]=1
+  D.pathway[5, 6]=1
+  D.pathway[6, 7]=1
+  
+  A.pathway.hidden = matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
+  A.pathway.hidden[upper.tri(A.pathway.hidden, diag = T)] = 0
+  A.pathway.hidden[4,3]=as.integer(!h0)
+  A.pathway.hidden[5,4]=1
+  A.pathway.hidden[6,5]=1
+  A.pathway.hidden[7,6]=1
+  out_U = 0
+  out_W = 0
+  cli_progress_bar("Cleaning data", total = m)
+  for(i in 1:m){
+    X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.pathway.hidden) )
+    LRT = log.LRT(X, D.pathway, links=F)
+    if(LRT$links)
+      cat('ERRORE, chiamata LRT con links=', links,'\n')
+    out_U = out_U+(LRT$U_n>-log(alpha))
+    out_W = out_W+(LRT$W_n>-log(alpha))
+    cli_progress_update()
+  }
+  cli_progress_done()
+  return(list(U_n = out_U/m, W_n = out_W/m))
+}
+
+test_link = function(m=1e3, alpha=.05, h0=T){
+  p = 10
+  n= 100
+  sparsity = 2/p
+  
+  D.link = matrix(0, p, p)
+  D.link[2, 1] = 1
+  D.link[6, 3] = 1
+  D.link[10, 9] = 1
+  
+  A.link.hidden = matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
+  A.link.hidden[upper.tri(A.link.hidden, diag = T)] = 0
+  A.link.hidden[2, 1] = as.integer(!h0)
+  A.link.hidden[6, 3] = 0
+  A.link.hidden[10, 9] = 0
+  
+  out_U = 0
+  out_W = 0
+  cli_progress_bar("Cleaning data", total = m)
+  for(i in 1:m){
+    X = matrix( rnorm(n*p), n, p) %*% t(solve(diag(p) - A.link.hidden) )
+    LRT = log.LRT(X, D.link, links=T)
+    if(!LRT$links)
+      cat('ERRORE, chiamata LRT con links=', links,'\n')
+    out_U = out_U+(LRT$U_n>-log(alpha))
+    out_W = out_W+(LRT$W_n>-log(alpha))
+    cli_progress_update()
+  }
+  cli_progress_done()
+  return(list(U_n=out_U/m, W_n=out_W/m))
+}
+```
+
+
+```{r}
+set.seed(1234)
+test_path()
+```
+
+```{r}
+set.seed(1234)
+test_link()
+```
+
 
