--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -214,9 +214,9 @@ test_link = function(m=1e3, alpha=.05, h0=T){
   # Building A accordingly to h0
   A.link.hidden = matrix(rbinom(p*p,1,sparsity)*sign(runif(p*p,min=-1,max=1)),p,p)
   A.link.hidden[upper.tri(A.link.hidden, diag = T)] = 0
-  A.link.hidden[2, 1] = 0#as.integer(!h0)
-  A.link.hidden[6, 3] = 0
-  A.link.hidden[10, 9] =0
+  A.link.hidden[2, 1] = 1#as.integer(!h0)
+  A.link.hidden[6, 3] = 1
+  A.link.hidden[10, 9] =1
   
   # Running the actual test
   out_U = 0
@@ -239,12 +239,12 @@ test_link = function(m=1e3, alpha=.05, h0=T){
 
 ```{r}
 set.seed(1234)
-test_path(h0 = T)
+test_path(h0 = F)
 ```
 
 ```{r}
 set.seed(1234)
-test_link(h0 = T)
+test_link(h0 = F, m=1e2)
 ```
 
 
